--- a/transformer(assignment02)/transformer(assignment02).ipynb
+++ b/transformer(assignment02)/transformer(assignment02).ipynb
@@ -756,8 +756,10 @@
     "\n",
     "# 假设 logits 是模型生成的概率分布，其已经通过softmax处理\n",
     "# logits.shape == (batch_size, seq_len, vocab_size)\n",
-    "logits = self.model.forward(tokens[:, prev_pos:cur_pos], prev_pos=cur_pos)\n",
+    "logits = self.model.forward(tokens[:, prev_pos:cur_pos], prev_pos, cur_pos)\n",
     "\n",
+    "temperature = 1.0\n",
+    "top_p = 0.9\n",
     "if temperature > 0:\n",
     "    logits = logits / temperature\n",
     "    probs = F.softmax(logits, dim=-1)\n",
@@ -794,10 +796,6 @@
     "    next_token = torch.multinomial(sorted_probs, num_samples=1)\n",
     "    return sorted_indices.gather(-1, next_token)\n",
     "\n",
-    "temperatures = 1.0\n",
-    "top_p = 0.9\n",
-    "\n",
-    "probs = F.softmax(logits[:, -1, :] / temperature, dim=-1)\n",
     "next_tokens = sample_top_p(probs, top_p)\n",
     "\n",
     "# Update tokens with next_tokens\n",
